--- a/abstract.tex
+++ b/abstract.tex
@@ -8,8 +8,15 @@
 \end{center}
 \vspace{0.5cm}
 
-This work presents a platform to manage and to provision lightpaths using control plane of the Generalized Multi-protocol Label Switch (GMPLS) in optical transport networks (OTN, ITU-T G.709). In order to make control of the optical connection requests, a new impairment-aware algorithm is proposed, which supports the Resource Reservation Protocol -- Traffic Engineering (RSVP-TE) of the GMPLS signaling by deployment of the impairment information. In fact, it adds three new indications in the NOTIFY messages. These indications refer to alarms that can be triggered caused by transmission problems, which may arise either in the optical or electrical signals. The monitoring is performed checking the transmitted and received optical power on the optical nodes. Moreover, the bit error rate (BER) is monitored after carrying out forward error correction algorithm (FEC) in the optical node. In order to validate the proposed algorithm, it was deployed a high speed experimental optical link ($10~Gbps$) of the KyaTera Project which connects two universities, Federal University of ABC (UFABC) and State University of Campinas (UNICAMP).
+The growth in the clients numbers of communication services combined with the user behavior change, who demands
+higher transmission rates, high quality services and access mobility, has taken to the accelerated growth in data traffic in the communication systems . It is necessary at this point, the continuous development of optical
+communication technologies, transport protocols, efficient network control, beside resilience techniques e reports fails. In this work, it is presented the optical network transport protocols, which has the function of route the
+data and transmits it over the physical layer, and also a description of the control planes which act in the management level. It is presented the principal optical transport technologies: Plesiochronous Digital Hierarchy
+(PDH), Synchronous Optical Networking (SONET), Synchronous Digital Hierarchy (SDH), Optical Transport Network
+(OTN). It is also detailed the optical networks control protocols such as Generalized Multiprotocol Label Switching
+(GMPLS) and Software Defined Networking (SDN). A case study with the application of the concepts related to this
+work is reported, showing the applicability of the topics discussed.
 
 \vspace{1.5ex}
 
-\textbf{Palavras-chave}: Optical network, optical transport network, GMPLS control plane, wavelength division multiplexing, provisioning, monitoring, lightpath, ITU-T G.709.
+\textbf{Palavras-chave}: Transport Protocols, Optical Network, Optical transport network, PDH, SONET/SDH, GMPLS, SDN.
