--- a/resumo.tex
+++ b/resumo.tex
@@ -8,8 +8,10 @@
 \end{center}
 \vspace{0.5cm}
 
-Este trabalho apresenta uma plataforma para o gerenciamento e aprovisionamento de caminhos óticos que faz uso de plano de controle GMPLS (\textit{Generalized Multiprotocol Label Switching}) em uma rede de transporte ótica que atende à recomendação ITU-T G.709. Para isto, um novo algoritmo foi desenvolvido e implementado para o controle de admissão de conexões baseado em restrições de camada física, que suporta o protocolo RSVP-TE (\textit{Resource Reservation Protocol -- Traffic Engineering}) para utilizar as informações sobre degradação do sinal ótico, incorporando somente três novos indicativos nas mensagens \textit{NOTIFY}. Essas adições referem-se a alarmes disparados devido a problemas de transmissão que podem ocorrer em sinais óticos ou elétricos. O monitoramento é feito analisando-se a potência ótica transmitida e recebida pelos terminais. Além disso, a taxa de erro de bits (BER) é monitorada após a execução do algoritmo de correção de erros (FEC) que é implementado no nó ótico. Para validar o algoritmo, utilizou-se um enlace experimental ponto a ponto de $10~Gbps$ com sinalização fora da banda do projeto Kyatera, que conecta a Universidade Federal do ABC (UFABC), campus Santo André, à Universidade Estadual de Campinas (UNICAMP).
+O aumento do número de clientes dos serviços de comunicações combinado com a mudança do perfil do usuário, que demanda maiores taxas de transmissão, serviços de alta qualidade e mobilidade de acesso, tem levado ao crescimento acelerado do tráfego de dados nas redes  de comunicações. Faz-se, então, necessário o contínuo desenvolvimento das
+tecnologias de comunicações ópticas, de seus protocolos de transporte, controle eficiente da
+rede, além de técnicas de resiliência e sobrevivência em caso de falhas. Neste trabalho são apresentadas alguns dos protocolos de redes ópticas de transporte, que tem a função de encaminhar os dados e transmiti-los sobre o meio físico, e dos planos de controle que atuam sobre o gerenciamente destas. São apresentadas as principais tecnologias de transporte óptico: Hierarquia Digital Plesiócrona (PDH), Rede Ótica Síncrona (SONET), Hierarquia Digital Síncrona (SDH) e Rede de Transporte Ótica (OTN). Adicionalmente, são detalhados os protocolos de controle como GMPLS (Generalized Multiprotocol Label Switching) e as Redes Definidas por software (SDN). Um estudo de caso com a aplicação dos conceitos envolvidos é relatado, ilustrando a aplicabilidade  dos tópicos discutidos.
 
 \vspace{1.5ex}
 
-\textbf{Palavras-chave}: Rede ótica, rede transporte ótica, plano de controle GMPLS, multiplexação por divisão de comprimento de onda, aprovisionamento, monitoramento, caminhos óticos, ITU-T G.709.
+\textbf{Palavras-chave}: Protocolos de Transporte, Rede ótica, Rede transporte ótica, PDH, SONET/SDH, GMPLS, SDN.
