--- a/app4.tex
+++ b/app4.tex
@@ -62,6 +62,7 @@
 \acro{NSFNet}{\textit{National Science Foundation Network}}
 \acro{NTTNet}{\textit{Nippon Telegraph and Telephone Network}}
 \acro{O-E-O}{Ótica-Eletrônica-Ótica}
+\acro{ROADM}{\textit{Reconfigurable Optical Add \slash~Drop Multiplexer}}
 \acro{OADM}{\textit{Optical Add \slash~Drop Multiplexer}}
 \acro{OAMP}[OAM\&P]{\textit{Operation, Administration, Maintenance and Provisioning}}
 \acro{OCh}{\textit{Optical Channel}}
@@ -138,4 +139,5 @@
 \acro{XPM}{\textit{Cross-Phase Modulation}}
 \acro{SDN}{\textit{Software Defined Networking}}
 \acro{IPTV}{\textit{Internet Protocol Television}}
+\acro{STS}{\textit{Synchronous Transport Signal}}
 \end{acronym}
