referencias de SDN

--- a/referencias.bib
+++ b/referencias.bib
@@ -410,6 +410,18 @@
   Timestamp                = {2010.03.18}
 }
 
+@Article{Jain2013,
+  Title                    = {Network virtualization and software defined networking for cloud computing: a survey},
+  Author                   = {Jain, R. and Paul, S.},
+  Journal                  = {Communications Magazine, IEEE},
+  Year                     = {2013},
+  Number                   = {24-31},
+  Volume                   = {51},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2015.06.22}
+}
+
 @Book{Kaminow2002,
   Title                    = {{Optical Fiber Telecommunications IV B: Systems and Impairments}},
   Author                   = {Ivan P. Kaminow and Tingye Li},
@@ -481,6 +493,17 @@
   Year                     = {2005},
   Organization             = {IEEE},
   Pages                    = {251--257}
+}
+
+@Article{Lopez2014,
+  Title                    = {Network functions virtualization: Beyond carrier-grade clouds},
+  Author                   = {Lopez, D. R.},
+  Journal                  = {Optical Fiber Communications Conference and Exhibition (OFC)},
+  Year                     = {2014},
+  Number                   = {1-18},
+
+  Owner                    = {alaelson},
+  Timestamp                = {2015.06.22}
 }
 
 @Article{Mambretti2006,
