Revisao do Cap 3

--- a/cap3/cap3.tex
+++ b/cap3/cap3.tex
@@ -1,3 +1,4 @@
+
 \chapter{A Rede de Transporte Ótica}
 \label{cap:g709}
 
@@ -70,6 +71,7 @@ Além de tomar como exemplo a experiência de monitoramento e análise de desempenh
 OTU-1 & $2.666$ & OC-48/STM-16 & $2.488$\\ 
 OTU-2 & $10.709$ & OC-192/STM-64 & $9.953$\\ 
 OTU-3 & $43.018$ & OC-768/STM-256 & $39.812$\\ 
+OTU-4 & $99.532$ &\\
 \hline
 \end{tabular}
 \end{threeparttable}
@@ -203,7 +205,7 @@ A Figura~\ref{fig:otn_opu_oh} ilustra o conteúdo do cabeçalho do OPU (OPU-OH). O
 
 O padrão G.709 suporta tanto sinais com taxa de \textit{bit} constante (\ac{CBR} -- \ac{CBR}) como sinais baseados em pacotes ou células. Assim, para tratar o sinal cliente de forma transparente dentro da \ac{OTN} é necessário fazer o mapeamento da taxa deste sinal no OPU-OH. Isto é feito de forma diferente dependendo da taxa de transmissão do cliente em relação à taxa da interface \ac{OTU}$k$, caso haja assincronia entre os \textit{clocks} das interfaces cliente e \ac{OTU}$k$. Neste caso, para fazer o mapeamento são utilizados os subcampos \ac{JC} que compensam a diferença entre os \textit{clocks}. No caso de sinais síncronos, os campos \ac{JC} são preenchidos com zeros.
 
-O tipo de carga útil transportada no quadro da \ac{OTN} é identificado pelo campo \ac{PT}. A Tabela~\ref{tab:payload_type} apresenta alguns dos tipos de sinais suportados~\cite{Gorshe2009}, para mais detalhes sobre cada tipo de \textit{payload} recomenda-se ler a documentação do G.709~\cite{G709}.
+O tipo de carga útil transportada no quadro da \ac{OTN} é identificado pelo campo \ac{PT}. A Tabela~\ref{tab:payload_type} apresenta alguns dos tipos de sinais suportados~\cite{Gorshe2011}, para mais detalhes sobre cada tipo de \textit{payload} recomenda-se ler a documentação do G.709~\cite{G709}.
 
 \begin{table}[H]
 \begin{center}
@@ -237,11 +239,11 @@ Código (Hex) & Tipo de \textit{payload}\\ \hline
 
 A principal indicação de falhas da \ac{OTN} está relacionada ao alinhamento do sinal, ou seja, quando o início e/ou fim do quadro não é identificado. Os \textit{bytes} da área de alinhamento do sinal podem indicar condições como: \ac{OOF}, \ac{OOM}, \ac{LOF} e \ac{LOM}. Quando os  \textit{bytes} campo \ac{FAS} não são reconhecidos durante cinco quadros consecutivos ou persiste durante $3~ms$, o protocolo G.709 alerta sobre eventos de \ac{OOF} e \ac{LOF}, respectivamente. Além disso, os eventos de \ac{OOM} ou \ac{LOM} acontecem quanto há falhas no reconhecimento de cinco quadros consecutivos ou durante $3~ms$ com erros no campo \ac{MFAS}, respectivamente. 
 
-Outros indicadores de erros que correspondem à qualidade de transmissão digital estão presentes nos subcampos \ac{BIP-8}, \ac{BEI}, \ac{BDI} dos campos \acl{SM} no OTU-OH, e nos campos \acl{PM} e \ac{TCM}$i$ do ODU-OH. O \ac{BIP-8} armazena \textit{bytes} de paridade que são calculados sobre a carga útil e o OPU-OH. O cálculo do \ac{BIP-8} é realizado antes de ser aplicada a \ac{FEC} na direção de transmissão e verificado depois da \ac{FEC} na direção de recepção. Os valores calculados do \ac{BIP-8} são inseridos no segundo quadro posterior ao utilizado para o cálculo. A capacidade de detecção de erros de paridade é de 8 bits por 15.$240~bytes$, o que corresponde a uma taxa erros de bit máxima de $6,56$x$10^{-5}$. O campo \ac{BEI} é utilizado no sentido inverso, ou seja, para informar ao transmissor que erros de \ac{BIP-8} foram encontrados nos quadros recebidos. O campo \ac{BDI} é usado para indicar \textit{upstream} que  há  um  problema  de  conectividade,  continuidade  ou  um  sinal  de  manutenção ativo~\cite{Barlow2004, G709}. 
+Outros indicadores de erros que correspondem à qualidade de transmissão digital estão presentes nos subcampos \ac{BIP-8}, \ac{BEI}, \ac{BDI} dos campos \acl{SM} no OTU-OH, e nos campos \acl{PM} e \ac{TCM}$i$ do ODU-OH. O \ac{BIP-8} armazena \textit{bytes} de paridade que são calculados sobre a carga útil e o OPU-OH. O cálculo do \ac{BIP-8} é realizado antes de ser aplicada a \ac{FEC} na direção de transmissão e verificado depois da \ac{FEC} na direção de recepção. Os valores calculados do \ac{BIP-8} são inseridos no segundo quadro posterior ao utilizado para o cálculo. A capacidade de detecção de erros de paridade é de 8 bits por 15.$240~bytes$, o que corresponde a uma taxa erros de bit máxima de $6,56$x$10^{-5}$. O campo \ac{BEI} é utilizado no sentido inverso, ou seja, para informar ao transmissor que erros de \ac{BIP-8} foram encontrados nos quadros recebidos. O campo \ac{BDI} é usado para indicar \textit{upstream} que  há  um  problema  de  conectividade,  continuidade  ou  um  sinal  de  manutenção ativo~\cite{Barlow2014, G709}. 
 
 \section{O Código Corretor de Erros (FEC)}
 
-O padrão G.709 suporta a correção de erros a partir do campo \ac{FEC} contido no quadro da OTN (Figura~\ref{fig:otn_quadro}). A \ac{FEC} reduz o número de erros transmitidos devido ao ruído e fenômenos óticos que ocorrem na fibra operando em altas taxas de transmissão (vide Sessão~\ref{sec:ro_impairments}). Assim, o G.709 permite que o sinal seja transmitido por grandes distâncias entre repetidores óticos sem a necessidade de regeneração. Isso torna a FEC um importante recurso da OTN. O cálculo é definido a partir de um esquema de $16~bytes$ entrelaçados utilizando o algoritmo \ac{RS}. Tal algoritmo usa $1024~bytes$ de informação de verificação por quadro ODU. Além disso, vários esquemas de proprietários de \ac{FEC} também são permitidos e são amplamente utilizados~\cite{Walker2007}. 
+O padrão G.709 suporta a correção de erros a partir do campo \ac{FEC} contido no quadro da OTN (Figura~\ref{fig:otn_quadro}). A \ac{FEC} reduz o número de erros transmitidos devido ao ruído e fenômenos óticos que ocorrem na fibra operando em altas taxas de transmissão. Assim, o G.709 permite que o sinal seja transmitido por grandes distâncias entre repetidores óticos sem a necessidade de regeneração. Isso torna a FEC um importante recurso da OTN. O cálculo é definido a partir de um esquema de $16~bytes$ entrelaçados utilizando o algoritmo \ac{RS}. Tal algoritmo usa $1024~bytes$ de informação de verificação por quadro ODU. Além disso, vários esquemas de proprietários de \ac{FEC} também são permitidos e são amplamente utilizados~\cite{Walker2007}. 
 
 O algoritmo \acl{RS} empregado pelo padrão G.709 melhora a relação sinal ruído (\aclu{SNR} -- \ac{SNR}) em até $6.2~dB$ para sistemas que exigem \ac{BER} de até $10^{-15}$~\cite{Walker2007}. A melhoria da \ac{SNR} fornecida pela \ac{FEC} é chamada de ganho de codificação, em que os benefícios por trás deste ganho, além do alcance do sinal, são: (\textit{i}) parâmetros menos restritos para potência de saída, razão de extinção, presença de ruído e filtros isolantes, reduzindo o custo dos componentes do enlace ótico; (\textit{ii}) aumentar o número de canais em sistemas \ac{WDM}, os quais estão limitados pela potência de saída dos amplificadores e (\textit{iii}) consolidação das redes totalmente óticas, pois permite que o sinal atravesse transparentemente um maior números de componentes óticos (\acp{OXC} e \acp{OADM}) sem a necessidade de regeneração, visto que tais componentes adicionam uma quantidade significante de degradações do sinal~\cite{Walker2007}.
 
