Ajuste da Introducao

--- a/cap1.tex
+++ b/cap1.tex
@@ -7,7 +7,7 @@ Para dar suporte as redes \ac{WDM}, faz-se necessário o contínuo desenvolvimento
 
 %De um ponto de vista geral, os sistemas de comunicações podem ser organizados em um hierarquia de camadas, tal como observado na Figura~\ref{fig:Camadas}, na qual cada segmentação permite o encapsulamento dos dados e assegura uma transmissão confiável e transparente. Neste contexto, o cliente insere tráfego de dados, vídeo e voz, utilizando a camada física como caminho interligando diversos nós na rede. Cada camada, encapsula informação útil a ser enviada, e para que a comunicação seja eficaz, é necessário que os protocolos de interfaceamento estejam bem definidos.
 
-Neste trabalho serão apresentadas alguns dos protocolos de redes óticas de transporte, que tem a função de encaminhar os dados e transmiti-los sobre o meio físico, e de plano de controle, para que a rede possa ser melhor gerenciada e controlada. Assim o Capítulo~\ref{cap:technology} apresenta as principais tecnologias óticas de transporte: Hierarquia Digital Plesiócroa (\aclu{PDH} -- \ac{PDH}), Rede Ótica Síncrona (\aclu{SONET} -- \ac{SONET}), Hierarquia Digital Síncrona (\aclu{SDH} -- \ac{SDH}) e a Rede de Transporte Ótica (\aclu{OTN} -- \ac{OTN}). O Capitulo~\ref{cap:controlplane} apresenta os protocolos de plano de controle para redes óticas, como o \aclu{GMPLS} (\ac{GMPLS}) e as Redes Definidas por Software (\aclu{SDN} -- \ac{SDN}). O capítulo~\ref{cap:case} traz um estudo de caso de aplicação de altíssima capacidade de transmissão apresetando na conferência \textit{Super Computing 2014}, por fim a conclusão é apresentada no Capítulo~\ref{cap:conclusion}.
+Neste trabalho serão apresentadas alguns dos protocolos de redes óticas de transporte, que tem a função de encaminhar os dados e transmiti-los sobre o meio físico, e de plano de controle, para que a rede possa ser melhor gerenciada e controlada. Assim o Capítulo~\ref{cap:technology} apresenta as principais tecnologias óticas de transporte: Hierarquia Digital Plesiócroa (\aclu{PDH} -- \ac{PDH}), Rede Ótica Síncrona (\aclu{SONET} -- \ac{SONET}), Hierarquia Digital Síncrona (\aclu{SDH} -- \ac{SDH}). A Rede de Transporte Ótica  (\aclu{OTN} -- \ac{OTN}), será apresentada em detalhes no capítulo~\ref{cap:g709}. O Capitulo~\ref{cap:controlplane} traz os protocolos de plano de controle para redes óticas, como o \aclu{GMPLS} (\ac{GMPLS}) e as Redes Definidas por Software (\aclu{SDN} -- \ac{SDN}). O capítulo~\ref{cap:case} traz um estudo de caso de aplicação de altíssima capacidade de transmissão apresetando na conferência \textit{Super Computing 2014}, por fim a conclusão é apresentada no Capítulo~\ref{cap:conclusion}.
 
  
 % SONET e SDH surgiram quase que simultaneamente por volta da década de 80, na América do Norte e Europa, respectivamente, devido a necessidade das companhias telefônicas em conectar suas redes e são utilizadas amplamente até hoje.
